Fixed mobile header styles to display avatar. Search field hidden on mobile now. Set overflow on wrapper

--- a/src/App.global.scss
+++ b/src/App.global.scss
@@ -1,4 +1,9 @@
 .container {
-  padding: 0 1.5rem;
-  width: 100%;
+  padding: 0 1rem;
+}
+
+@media screen and (min-width: 896px) {
+  .container {
+    padding: 0 1.5rem;
+  }
 }
