--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -9,6 +9,8 @@ html {
   height: 100%;
 }
 .wrapper {
+  width: 100%;
+  overflow: hidden;
   height: 100vh;
   min-height: 100vh;
   display: flex;
