--- a/src/components/Header/Hamburger/Hamburger.module.scss
+++ b/src/components/Header/Hamburger/Hamburger.module.scss
@@ -12,7 +12,7 @@
   span {
     transition: opacity 0.2s ease, transform 0.2s ease;
     opacity: 1;
-    width: 100%;
+    min-width: 30px;
     height: 2px;
     background: #fff;
   }
