--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,5 @@
 .site_header {
+  width: 100%;
   padding: 0.5rem 0;
   background: #00b4ff;
 }
