--- a/src/components/Header/Search/Search.module.scss
+++ b/src/components/Header/Search/Search.module.scss
@@ -14,6 +14,8 @@
   font-size: 0.9rem;
   color: white;
   background: transparent;
+  margin-left: auto;
+  max-width: 0;
 }
 
 .search_bar::placeholder {
@@ -50,6 +52,7 @@
     color: #3c3c3c;
     background: white;
     box-shadow: inset 0 0 8px rgb(220, 220, 220);
+    max-width: 100%;
   }
 
   .search_bar:focus,
